force-app/main/default/objects/Coverage__c/Coverage__c.object-meta.xml
<CustomObject>
    <label>Coverage</label>
    <nameField>
        <displayFormat>Coverage-{MM}-{DD}-{YYYY}-{000000}</displayFormat>
        <label>Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>