force-app/main/default/objects/Coverage__c/fields/In_Network_Deductible_Met__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Deductible_Met__c</fullName>
    <label>In Network Deductible Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>