force-app/main/default/objects/Coverage__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <label>Insurance Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Health_Insurance_Company</valueSetName>
    </valueSet>
</CustomField>