force-app/main/default/objects/Coverage__c/fields/Insurance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Plan</label>
    <referenceTo>Insurance_Plan__c</referenceTo>
    <relationshipName>Patient_Insurance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>