force-app/main/default/objects/Coverage__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Patient_Insurance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>