force-app/main/default/objects/Coverage__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <label>Member ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>