force-app/main/default/objects/Coverage__c/fields/Out_of_Network_Family_Out_of_Pocket_Met__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Network_Family_Out_of_Pocket_Met__c</fullName>
    <label>Out of Network Family Out of Pocket Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>