force-app/main/default/objects/Coverage__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Patient_Insurance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>