force-app/main/default/objects/Coverage__c/fields/Patient_Eligible_for_TENS_Unit__c.field-meta.xml
<CustomField>
    <fullName>Patient_Eligible_for_TENS_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Eligible for TENS Unit</label>
    <type>Checkbox</type>
</CustomField>