force-app/main/default/objects/Coverage__c/fields/Primary_or_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Primary_or_Secondary__c</fullName>
    <label>Primary or Secondary?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>